# closeclaw

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  config.example.yaml  pyproject.toml
src/closeclaw/: __init__.py  api.py  config.py  cron.py
src/closeclaw/agent_core/: __init__.py  agent_config.py  loader.py  loop.py  runtime.py
src/closeclaw/agent_core/tools/: __init__.py  _file_utils.py  _path_utils.py  _utils.py  bash.py  glob_tool.py  grep.py  read_file.py  read_media.py  replace_file.py  send_image.py  send_photo.py  shell.py  write_file.py
src/closeclaw/agent_core/tools/descs/: read_media.md  send_image.md  shell.md
src/closeclaw/channels/: __init__.py  telegram.py
src/closeclaw/cli/: __init__.py  main.py
src/closeclaw/default_agent/: SYSTEM.md  agent.yaml
tests/: test_agent_config.py  test_agent_loop.py  test_api.py  test_bash_tool.py  test_config.py  test_cron.py  test_heartbeat.py  test_session.py  test_shell_tool.py  test_telegram.py  test_tools.py
