[project]
name = "closeclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Wong", email = "justin.w.xd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "kosong>=0.46.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
closeclaw = "closeclaw:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
